<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home2"
        />
    <item android:id="@+id/nav_book"
        android:title="@string/book"
        android:icon="@drawable/ic_book"/>
    <item android:id="@+id/nav_fav"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>
    <item android:id="@+id/nav_info"
        android:title="@string/info2"
        android:icon="@drawable/ic_info"/>

    <item android:title="@string/profile">
        <menu>
            <item android:id="@+id/nav_perfil"
                  android:title="@string/perfil"
                  android:icon="@drawable/ic_perfil"/>
            <item android:id="@+id/nav_logout"
                  android:title="@string/logout"
                  android:icon="@drawable/ic_closesession"/>
        </menu>
    </item>


</menu>