<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="handler"
            type="unicauca.movil.peliculas.LoginActivity"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="unicauca.movil.peliculas.LoginActivity">

        <!-- dasdas -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:background="@color/colorPrimary"
            android:src="@drawable/loginpic"
            android:scaleType="centerCrop"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title"
                android:textSize="90sp"
                android:fontFamily="cursive"/>



            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="290dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="50dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:layout_marginTop="350dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="50dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnLogin"
                android:onClick="@{()-> handler.login()}"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="450dp"
                android:background="@android:color/holo_blue_light"
                android:text="Entrar"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btnRegistro"
                android:onClick="@{()-> handler.signin()}"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_marginTop="450dp"
                android:textColor="@color/colorPrimary"

                android:text="REGISTRATE" />
        </FrameLayout>


    </android.support.constraint.ConstraintLayout>
</layout>

